trybuild-qcell/src/compiletest/tcell-13.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> src/compiletest/tcell-13.rs:9:15
  |
9 |     is_sync::<TCell<Marker, Rc<()>>>();  // Compile fail
  |               ^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `Rc<()>`
  = note: required for `TCell<Marker, Rc<()>>` to implement `Sync`
note: required by a bound in `is_sync`
 --> src/compiletest/tcell-13.rs:8:19
  |
8 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`

error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> src/compiletest/tcell-13.rs:9:15
  |
9 |     is_sync::<TCell<Marker, Rc<()>>>();  // Compile fail
  |               ^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Rc<()>`
  = note: required for `TCell<Marker, Rc<()>>` to implement `Sync`
note: required by a bound in `is_sync`
 --> src/compiletest/tcell-13.rs:8:19
  |
8 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`
